# name: TestCalculateEventPropertyUsage.test_calculate_usage
  '
  SELECT "ee_license"."id",
         "ee_license"."created_at",
         "ee_license"."plan",
         "ee_license"."valid_until",
         "ee_license"."key",
         "ee_license"."max_users"
  FROM "ee_license"
  WHERE "ee_license"."valid_until" >= '2022-09-12T21:09:51.962218+00:00'::timestamptz
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.1
  '
  SELECT "posthog_plugin"."id",
         "posthog_plugin"."organization_id",
         "posthog_plugin"."plugin_type",
         "posthog_plugin"."is_global",
         "posthog_plugin"."is_preinstalled",
         "posthog_plugin"."is_stateless",
         "posthog_plugin"."name",
         "posthog_plugin"."description",
         "posthog_plugin"."url",
         "posthog_plugin"."config_schema",
         "posthog_plugin"."tag",
         "posthog_plugin"."archive",
         "posthog_plugin"."latest_tag",
         "posthog_plugin"."latest_tag_checked_at",
         "posthog_plugin"."capabilities",
         "posthog_plugin"."metrics",
         "posthog_plugin"."public_jobs",
         "posthog_plugin"."error",
         "posthog_plugin"."from_json",
         "posthog_plugin"."from_web",
         "posthog_plugin"."source",
         "posthog_plugin"."created_at",
         "posthog_plugin"."updated_at",
         "posthog_plugin"."log_level"
  FROM "posthog_plugin"
  WHERE "posthog_plugin"."is_preinstalled"
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.10
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.11
  '
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'test'
         AND "posthog_persondistinctid"."team_id" = 2)
  LIMIT 21
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.12
  '
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'test'
         AND "posthog_persondistinctid"."team_id" = 2)
  LIMIT 21
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.13
  '
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'test'
         AND "posthog_persondistinctid"."team_id" = 2)
  LIMIT 21
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.14
  '
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'test'
         AND "posthog_persondistinctid"."team_id" = 2)
  LIMIT 21
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.15
  '
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'test'
         AND "posthog_persondistinctid"."team_id" = 2)
  LIMIT 21
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.16
  '
  SELECT "posthog_eventdefinition"."id",
         "posthog_eventdefinition"."team_id",
         "posthog_eventdefinition"."name",
         "posthog_eventdefinition"."created_at",
         "posthog_eventdefinition"."last_seen_at",
         "posthog_eventdefinition"."volume_30_day",
         "posthog_eventdefinition"."query_usage_30_day"
  FROM "posthog_eventdefinition"
  WHERE "posthog_eventdefinition"."team_id" = 2
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.17
  '
  SELECT "posthog_propertydefinition"."id",
         "posthog_propertydefinition"."team_id",
         "posthog_propertydefinition"."name",
         "posthog_propertydefinition"."is_numerical",
         "posthog_propertydefinition"."query_usage_30_day",
         "posthog_propertydefinition"."property_type",
         "posthog_propertydefinition"."property_type_format",
         "posthog_propertydefinition"."volume_30_day"
  FROM "posthog_propertydefinition"
  WHERE "posthog_propertydefinition"."team_id" = 2
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.18
  '
  SELECT "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."filters"
  FROM "posthog_dashboarditem"
  WHERE ("posthog_dashboarditem"."created_at" > '2020-09-01T00:00:00+00:00'::timestamptz
         AND "posthog_dashboarditem"."team_id" = 2)
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.19
  '
  SELECT "posthog_eventdefinition"."id",
         "posthog_eventdefinition"."team_id",
         "posthog_eventdefinition"."name",
         "posthog_eventdefinition"."created_at",
         "posthog_eventdefinition"."last_seen_at",
         "posthog_eventdefinition"."volume_30_day",
         "posthog_eventdefinition"."query_usage_30_day"
  FROM "posthog_eventdefinition"
  WHERE ("posthog_eventdefinition"."name" = '$pageview'
         AND "posthog_eventdefinition"."team_id" = 2)
  LIMIT 21
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.2
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.20
  '
  SELECT "posthog_eventdefinition"."id",
         "posthog_eventdefinition"."team_id",
         "posthog_eventdefinition"."name",
         "posthog_eventdefinition"."created_at",
         "posthog_eventdefinition"."last_seen_at",
         "posthog_eventdefinition"."volume_30_day",
         "posthog_eventdefinition"."query_usage_30_day"
  FROM "posthog_eventdefinition"
  WHERE ("posthog_eventdefinition"."name" = '$pageview'
         AND "posthog_eventdefinition"."team_id" = 2)
  LIMIT 21
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.21
  '
  SELECT "posthog_eventdefinition"."id",
         "posthog_eventdefinition"."team_id",
         "posthog_eventdefinition"."name",
         "posthog_eventdefinition"."created_at",
         "posthog_eventdefinition"."last_seen_at",
         "posthog_eventdefinition"."volume_30_day",
         "posthog_eventdefinition"."query_usage_30_day"
  FROM "posthog_eventdefinition"
  WHERE ("posthog_eventdefinition"."name" = 'custom event'
         AND "posthog_eventdefinition"."team_id" = 2)
  LIMIT 21
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.22
  '
  SELECT "posthog_eventdefinition"."id",
         "posthog_eventdefinition"."team_id",
         "posthog_eventdefinition"."name",
         "posthog_eventdefinition"."created_at",
         "posthog_eventdefinition"."last_seen_at",
         "posthog_eventdefinition"."volume_30_day",
         "posthog_eventdefinition"."query_usage_30_day"
  FROM "posthog_eventdefinition"
  WHERE ("posthog_eventdefinition"."name" = 'custom event'
         AND "posthog_eventdefinition"."team_id" = 2)
  LIMIT 21
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.23
  '
  SELECT "posthog_propertydefinition"."id",
         "posthog_propertydefinition"."team_id",
         "posthog_propertydefinition"."name",
         "posthog_propertydefinition"."is_numerical",
         "posthog_propertydefinition"."query_usage_30_day",
         "posthog_propertydefinition"."property_type",
         "posthog_propertydefinition"."property_type_format",
         "posthog_propertydefinition"."volume_30_day"
  FROM "posthog_propertydefinition"
  WHERE ("posthog_propertydefinition"."name" = '$current_url'
         AND "posthog_propertydefinition"."team_id" = 2)
  LIMIT 21
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.24
  '
  SELECT "posthog_propertydefinition"."id",
         "posthog_propertydefinition"."team_id",
         "posthog_propertydefinition"."name",
         "posthog_propertydefinition"."is_numerical",
         "posthog_propertydefinition"."query_usage_30_day",
         "posthog_propertydefinition"."property_type",
         "posthog_propertydefinition"."property_type_format",
         "posthog_propertydefinition"."volume_30_day"
  FROM "posthog_propertydefinition"
  WHERE ("posthog_propertydefinition"."name" = 'team_id'
         AND "posthog_propertydefinition"."team_id" = 2)
  LIMIT 21
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.25
  '
  SELECT "posthog_propertydefinition"."id",
         "posthog_propertydefinition"."team_id",
         "posthog_propertydefinition"."name",
         "posthog_propertydefinition"."is_numerical",
         "posthog_propertydefinition"."query_usage_30_day",
         "posthog_propertydefinition"."property_type",
         "posthog_propertydefinition"."property_type_format",
         "posthog_propertydefinition"."volume_30_day"
  FROM "posthog_propertydefinition"
  WHERE ("posthog_propertydefinition"."name" = 'used property'
         AND "posthog_propertydefinition"."team_id" = 2)
  LIMIT 21
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.26
  '
  SELECT "posthog_propertydefinition"."id",
         "posthog_propertydefinition"."team_id",
         "posthog_propertydefinition"."name",
         "posthog_propertydefinition"."is_numerical",
         "posthog_propertydefinition"."query_usage_30_day",
         "posthog_propertydefinition"."property_type",
         "posthog_propertydefinition"."property_type_format",
         "posthog_propertydefinition"."volume_30_day"
  FROM "posthog_propertydefinition"
  WHERE ("posthog_propertydefinition"."name" = 'unused property'
         AND "posthog_propertydefinition"."team_id" = 2)
  LIMIT 21
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.3
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.4
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.5
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.6
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.7
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.8
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2
  '
---
# name: TestCalculateEventPropertyUsage.test_calculate_usage.9
  '
  SELECT "posthog_dashboardtile"."id",
         "posthog_dashboardtile"."dashboard_id",
         "posthog_dashboardtile"."insight_id",
         "posthog_dashboardtile"."layouts",
         "posthog_dashboardtile"."color",
         "posthog_dashboardtile"."filters_hash",
         "posthog_dashboardtile"."last_refresh",
         "posthog_dashboardtile"."refreshing",
         "posthog_dashboardtile"."refresh_attempt",
         "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
         "posthog_dashboard"."deprecated_tags",
         "posthog_dashboard"."tags",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."derived_name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."updated_at",
         "posthog_dashboarditem"."deprecated_tags",
         "posthog_dashboarditem"."tags"
  FROM "posthog_dashboardtile"
  INNER JOIN "posthog_dashboarditem" ON ("posthog_dashboardtile"."insight_id" = "posthog_dashboarditem"."id")
  INNER JOIN "posthog_dashboard" ON ("posthog_dashboardtile"."dashboard_id" = "posthog_dashboard"."id")
  WHERE "posthog_dashboardtile"."insight_id" = 2
  '
---
